# xolo-api

./: .env  .env.dev  .gitignore  Dockerfile  LICENSE  README.md  build.sh  deploy.sh  docker-compose.yml  mongod.conf  pyproject.toml  rebuild_install_commonx.sh  requirements.txt  restart.sh  run.sh  run_local.sh  send_email.sh  xolo.yml  zensical.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
db/: create_user.sh  mongod.conf  set_node_priority.sh
deploy/env/: app.prod.env  compose.env  mongodb.env  redis.env
docs/: access-control.md  architecture.md  authentication-and-admin.md  configuration.md  contributing.md  deployment.md  getting-started.md  index.md  logging.md  project-structure.md
scripts/: .env  bulk_grants.py  configuration_gen.py  create_bulk.py
src/: server.py
tests/: support.py  test_acl_controller.py  test_api.py  test_apikey_auth_scopes_licenses.py  test_mongo_acl.py  test_services.py
tests/abac/: conftest.py  test_abac_controller.py  test_abac_repository.py  test_abac_service.py
tests/accounts/: conftest.py  test_accounts_controller.py
tests/acl/: conftest.py  test_acl_controller_account_scoping.py  test_acl_repository.py
tests/admin_ui/: conftest.py  test_admin_ui.py
tests/apikeys/: test_apikeys_controller.py
tests/groups/: conftest.py  test_groups_repository.py
tests/licenses/: conftest.py  test_licenses_controller.py  test_licenses_repository.py  test_licenses_service.py
tests/ngac/: conftest.py  test_ngac_controller.py  test_ngac_graph.py  test_ngac_ownership.py  test_ngac_repository.py  test_ngac_service.py
tests/rbac/: conftest.py  test_rbac_controller.py
tests/scopes/: conftest.py  test_scopes_controller.py  test_scopes_repository.py  test_scopes_service.py
tests/users/: conftest.py  test_users_controller.py  test_users_dependencies.py  test_users_repository.py  test_users_service.py
xoloapi/: server.py
xoloapi/abac/: __init__.py  controller.py  dto.py  evaluator.py  models.py  repository.py  service.py  value_objects.py
xoloapi/accounts/: __init__.py  controller.py  dependencies.py  dto.py  models.py
xoloapi/acl/: controller.py  dto.py
xoloapi/admin_ui/: __init__.py  controller.py
xoloapi/apikeys/: controller.py  dto.py
xoloapi/config/: __init__.py
xoloapi/controllers/: __init__.py  acl.py  licenses.py  policies.py  scopes.py  users.py
xoloapi/db/: __init__.py  cache.py  constants.py
xoloapi/dto/: __init__.py  acl.py  user.py
xoloapi/enums/: __init__.py
xoloapi/errors/: __init__.py  base.py
xoloapi/licenses/: controller.py  dependencies.py  dto.py
xoloapi/log/: __init__.py  format.py
xoloapi/middleware/: __init__.py  admin.py  apikey.py
xoloapi/models/: __init__.py
xoloapi/ngac/: __init__.py  controller.py  dto.py  enums.py  graph.py  models.py  repository.py  service.py
xoloapi/policies/: controller.py  repository.py  service.py
xoloapi/rbac/: controller.py  dto.py
xoloapi/repositories/: __init__.py  (+5 more)
(+93 files in other folders)
