[tool.poetry]
name = "xoloapi"
version = "0.0.10a18"
description = ""
authors = ["Ignacio Castillo <ignacio.bcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
pydantic = {extras = ["email"], version = "^2.12.5"}
motor = "^3.6.0"
pyyaml = "^6.0.2"
uvicorn = "^0.31.0"
durations = "^0.3.3"
nanoid = "^2.0.0"
option = "^2.1.0"
requests = "^2.32.3"
pyjwt = "^2.9.0"
retry = "^0.9.2"
humanfriendly = "^10.0"
numpy = "^2.2.5"
xolo = {version = "0.0.10a1", source = "test"}
redis = {extras = ["async"], version = "^7.0.0"}
bcrypt = "^5.0.0"
commonx = "0.0.1a2"
# commonx = "0.0.1a1"
fastapi = "^0.135.2"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
mongomock-motor = "^0.0.36"
pytest = "8.4.2"
coverage = "^7.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"