[tool.poetry]
name = "xoloapi"
version = "0.1.0a2"
description = ""
authors = ["Ignacio Castillo <ignacio.bcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
pydantic = {extras = ["email"], version = "^2.12.5"}
motor = "^3.6.0"
pyyaml = "^6.0.2"
uvicorn = "^0.31.0"
durations = "^0.3.3"
nanoid = "^2.0.0"
option = "^2.1.0"
requests = "^2.32.3"
pyjwt = "^2.9.0"
retry = "^0.9.2"
humanfriendly = "^10.0"
xolo = {version = "0.0.11a2", allow-prereleases = true, source = "test"}
redis = {extras = ["async"], version = "^7.0.0"}
bcrypt = "^5.0.0"
fastapi = "^0.135.2"
jinja2 = "^3.1.6"
python-multipart = "^0.0.27"
commonx = {version = "0.0.1a3", source = "test"}
geopy = "^2.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
mongomock-motor = "^0.0.36"
pytest = "8.4.2"
coverage = "^7.13.5"


[tool.poetry.group.docs.dependencies]
zensical = "^0.0.39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
